responsive design and finishing touches-m

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body, body a {
 }
 
 /*   nav   */
-
 .nav-link {
   color: white;
   font-size: 20px;
@@ -19,6 +18,31 @@ body, body a {
 .nav-link:hover {
   transform: scale(1.4);
   color: white;
+}
+
+/* nav for medium and below */
+.dropdown-menu a{
+  color: #343a40;
+  display: block;
+  line-height: 3em;
+  padding-left: 15px;
+}
+
+@media (max-width: 992px) {
+  .nav-large {
+    display: none !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-toggler {
+    display: none !important;
+  }
+}
+
+.navbar-toggler {
+  position: absolute !important;
+  z-index: 5;
 }
 
   /*hero*/
@@ -36,6 +60,12 @@ body, body a {
 .content {
   overflow: wrap;
   padding: 0 60px 50px 60px;
+}
+
+@media (max-width: 768px) {
+  .content {
+    padding: 0 10px 30px 10px;
+  }
 }
 
 .content-header {
@@ -67,6 +97,12 @@ body, body a {
   line-height: 4em;
   font-size: 18px;
   padding-left: 15px;
+}
+
+@media (max-width: 992px) {
+  .contact {
+    margin-top: 40px;
+  }
 }
 
 .scrollableRow {
